# msgforge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/msgforge/: __init__.py  _builder.py
tests/: test_basic.py
